# MyORM

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: ProtoGen.cmake  TestUtils.cmake
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  config.cpp  config.h  format.cpp  format.h  logging.cpp  logging.h  logging_config.h  program.cpp  program.h  program.ipp  refcounted.h
lib/ipc/: CMakeLists.txt
lib/query_builder/: CMakeLists.txt  builder_base.cpp  builder_base.h  query_organizer_base.cpp  query_organizer_base.h
lib/query_builder/builders/: postgres.cpp  postgres.h
lib/query_builder/organizers/: sql_organizer.cpp  sql_organizer.h
lib/relation/: CMakeLists.txt  base.cpp  base.h  config.cpp  config.h  fetch_info.cpp  fetch_info.h  fetch_info.ipp  field.cpp  field.h  message.cpp  message.h  path.cpp  path.h  query_builder.cpp  query_builder.h  relation_manager.cpp  relation_manager.h
lib/relation/builders/: postgres.cpp  postgres.h
lib/relation/proto/: orm_core.proto  query.proto
lib/requests/: CMakeLists.txt  query.cpp  query.h
lib/requests/proto/: http.proto  query.proto
lib/rpc/: CMakeLists.txt  http_server.cpp  http_server.h  protobuf_format.h  service_rpc.h
lib/rpc/proto/: http.pb.cc  http.pb.h
master/: CMakeLists.txt
master/proto/: CMakeLists.txt  login.pb.cc  login.pb.h  login.proto  object_base.pb.cc  object_base.pb.h  object_base.proto  test_object.pb.cc  test_object.pb.h  test_object.proto
master/service/: CMakeLists.txt  main.cpp  service_rpc.cpp  service_rpc.h
master/service/query/: postgresql.cpp  postgresql.h
tests/: CMakeLists.txt
tests/common/: format_test.cpp  logging_test.cpp  program_test.cpp
tests/master/: postgresql_test.cpp
tests/proto/: test_objects.proto
tests/query_builder/: postgres_query_builder_test.cpp  query_organizer_test.cpp
tests/relation/: field_test.cpp  message_test.cpp  path_test.cpp  postgres_query_builder_test.cpp  relation_manager_test.cpp  root_message_test.cpp  test.cpp
tests/requests/: query_create_test.cpp
